--- a/README.textile
+++ b/README.textile
@@ -13,7 +13,7 @@ To use this plugin you must be using a version of LocomotiveCMS that has the plu
 
 Then add the following lines in your Gemfile to include the plugin:
 <pre><code>group :locomotive_plugins do
-  gem 'basic_auth_hb_plugin', git: https://github.com/colibri-software/basic_auth_hb_plugin.git'
+  gem 'locomotive_basic_auth_plugin'
 end</code></pre>
 
 h2. Usage
